@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.863 2007-11-15 15:15:08 castaglia Exp $
+$Id: NEWS,v 1.864 2007-11-15 17:21:19 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -55,6 +55,8 @@ CVS
   too restrictive.  If differences are detected now, the difference is logged,
   but the daemon will start up.
 - Bug 3005 - OOB abort closes the control connection.
+- Bug 3004 - 'ScanOnLogin' QuotaOption does not honor QuotaDirectoryTally
+  directive.
 
 1.3.1 - Released 5-Oct-2007
 --------------------------------
